[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.14.1",
    "ninja; platform_system!='Windows'",

    # Draft in order to install windows deps via conan
    # "conan>=1.5",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"


#####################################
# cibuildwheel
#####################################
[tool.cibuildwheel]
build-verbosity = 1
# Target python versions:
#build = ["cp311-*", "cp312-*"]
build = ["cp312-*"]
# Tests
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
# identify whether this is a M1 or intel
before-build = "uname -a"
archs = ["x86_64", "arm64"]
# archs = ["arm64"]

[tool.cibuildwheel.linux]
skip = ["*i686", "*-musllinux*"]
# test-skip = ["cp311-musllinux_x86_64"]

# Install dev packages on manylinux:
# Do the equivalent of
# sudo apt-get update && sudo apt-get install --no-install-recommends -y \
#    libxml2-dev \
#    libxml2-utils \
#    libxslt1-dev \
#    libarchive-dev \
#    libssl-dev \
#    libcurl4-openssl-dev \
# but with yum
# also install java
before-all = "yum install -y libxml2-devel libxslt-devel libarchive-devel openssl-devel libcurl-devel java-1.8.0-openjdk-devel"

#[[tool.cibuildwheel.overrides]]
## Install dev packages on musllinux (alpine etc):
#select = "*-musllinux*"
#before-all = "apk add xorg-server-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev"
